--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@tailwindcss/line-clamp": "^0.4.4",
     "@tailwindcss/vite": "^4.1.17",
     "daisyui": "^5.5.5",
+    "immer": "^11.0.1",
     "lucide-react": "^0.554.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
