feat: aliases update, routes mock, project modal, daisy dynamic classes

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -37,6 +37,8 @@
       "@contexts/*": ["contexts/*"],
       "@guards/*": ["guards/*"],
       "@services/*": ["services/*"],
+      "@providers/*": ["providers/*"],
+      "@controllers/*": ["controllers/*"],
       "@utils/*": ["utils/*"]
     }
   },
