--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-dom": "^19.2.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.6",
+    "react-virtuoso": "^4.17.0",
     "tailwindcss": "^4.1.17",
     "uuid": "^13.0.0",
     "ws": "^8.18.3",
