--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -5,8 +5,8 @@
     "useDefineForClassFields": true,
     "lib": ["ES2022", "DOM", "DOM.Iterable"],
     "module": "ESNext",
-    "types": ["vite/client"],
     "skipLibCheck": true,
+    "types": ["vite/client", "jest", "node"],
 
     /* Bundler mode */
     "moduleResolution": "node",
@@ -42,5 +42,5 @@
       "@utils/*": ["utils/*"]
     }
   },
-  "include": ["src"]
+  "include": ["src", "src/types/global.d.ts"]
 }
