--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,5 +17,7 @@
     "strict": true,
     "skipLibCheck": true,
     "baseUrl": "src",
-  }
+    "types": ["jest", "node", "@testing-library/jest-dom"]
+  },
+  "include": ["src", "**/*.test.ts", "**/*.test.tsx", "src/types/global.d.ts"]
 }
