--- a/package.json
+++ b/package.json
@@ -5,18 +5,10 @@
   "type": "module",
   "scripts": {
     "run-app": "npm run dev",
-    "dev": "vite",
-    "build": "tsc -b && vite build",
-    "lint": "eslint .",
-    "preview": "vite preview",
-    "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx,json,css,md,scss,html}\"",
     "run-server": "node server/index.js",
-    "test": "jest",
-    "e2e-test": "npm run cypress:open",
-    "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage",
-    "cypress:open": "cypress open",
-    "e2e-test:run": "start-server-and-test dev http://localhost:5173 e2e-test"
+    "run-unit-tests": "jest",
+    "run-e2e-tests": "npm run cypress:open",
+    "cypress:open": "cypress open"
   },
   "dependencies": {
     "@faker-js/faker": "^10.1.0",
